zadaca 03 - jakarta MVC informaciju o statusu rada poslužitelja Tvrtka (osvježava se pomoći WebSocket poruke na /ws/tvrtka). custom poruka radi samo statusi aktivani neaktivan ovise o reloadu stranice